--- a/view.html
+++ b/view.html
@@ -263,7 +263,9 @@ button {
             </li>
             <li class="nav-item">
                 <a class="nav-link text-danger" href="student_management.html">Students Management</a>
-          
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-danger" id="resultManagementLink"  href="staff_management.html">Staff Management</a>
               </li>
         </ul>
         <button class="cancel-btn" style="display: none;" onclick="toggleNavbar()">✖</button> <!-- Cancel icon -->
@@ -351,26 +353,6 @@ function toggleNavbar() {
 }
 
 
-
-       let studentToDelete = null;
-
-function loadClassOptions() {
-    $.ajax({
-        url: '/api/fetchClasses',
-        method: 'GET',
-        success: function(classes) {
-            const classSelection = $('#class-selection');
-            classSelection.empty();
-            classSelection.append('<option value="" selected disabled>Select Class</option>');
-            classes.forEach(c => {
-                classSelection.append(`<option value="${c}">${c}</option>`);
-            });
-        },
-        error: function(err) {
-            alert('Error loading classes.');
-        }
-    });
-}
 
 
 
