--- a/staff_dashboard.html
+++ b/staff_dashboard.html
@@ -449,9 +449,11 @@ button {
               <a class="nav-link text-danger" href="staff_dashboard.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-danger" id="resultManagementLink"  href="resultmanagement.html">Results Management</a>
+            <a class="nav-link text-danger" id="resultManagementLink"  href="resultmanagement.html">Academic Grade</a>
           </li>
-         
+          <li class="nav-item">
+            <a class="nav-link text-danger" id="resultManagementLink"  href="extra-curriculum-assessment.html">Conduct and Development</a>
+          </li>
           <!-- Download ID Card -->
           <li class="nav-item">
             <a class="nav-link ml-5" href="#" data-toggle="modal" data-target="#idCardModal">Staff ID Card</a>
